--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Servizi</a>
+                        <a href="#portfolio">Cosa facciamo</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">Chi siamo</a>
@@ -73,9 +73,9 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Start Bootstrap</span>
+                        <span class="name">Educational Factchecking</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">A no-profit association promoting media education for young audiences</span>
                     </div>
                 </div>
             </div>
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h2>Cosa facciamo</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -161,7 +161,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
+                    <h2>Chi siamo</h2>
                     <hr class="star-light">
                 </div>
             </div>
@@ -186,7 +186,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Contact Me</h2>
+                    <h2>Contatti</h2>
                     <hr class="star-primary">
                 </div>
             </div>
