--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Cosa facciamo</a>
+                        <a href="#portfolio">What we do</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">Chi siamo</a>
+                        <a href="#about">Who we are</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Contatti</a>
+                        <a href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -75,7 +75,7 @@
                     <div class="intro-text">
                         <span class="name">Educational Factchecking</span>
                         <hr class="star-light">
-                        <span class="skills">A no-profit association promoting media education for young audiences</span>
+                        <span class="skills">A no-profit association promoting media education</span>
                     </div>
                 </div>
             </div>
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Cosa facciamo</h2>
+                    <h2>What we do</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -161,7 +161,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Chi siamo</h2>
+                    <h2>Who we are</h2>
                     <hr class="star-light">
                 </div>
             </div>
@@ -186,7 +186,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Contatti</h2>
+                    <h2>Contact</h2>
                     <hr class="star-primary">
                 </div>
             </div>
