--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <img class="img-responsive" src="img/logo_factcheckers.jpg" alt="">
                     <div class="intro-text">
-                        <span class="name">Educational Factchecking</span>
+                        <span class="name">We Do Educational Factchecking</span>
                         <hr class="star-light">
                         <span class="skills">A no-profit association promoting media education</span>
                     </div>
