--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">What we do</a>
+                        <a href="#portfolio">Cosa facciamo</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">Who we are</a>
+                        <a href="#about">Chi siamo</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                        <a href="#contact">Contatti</a>
                     </li>
                 </ul>
             </div>
@@ -75,7 +75,7 @@
                     <div class="intro-text">
                         <span class="name">We Do Educational Factchecking</span>
                         <hr class="star-light">
-                        <span class="skills">A no-profit association promoting media education</span>
+                        <span class="skills">Associazione no-profit per la promozione della media-education</span>
                     </div>
                 </div>
             </div>
