--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>What we do</h2>
+                    <h2>Cosa facciamo</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -161,7 +161,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Who we are</h2>
+                    <h2>Chi siamo</h2>
                     <hr class="star-light">
                 </div>
             </div>
@@ -186,7 +186,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Contact</h2>
+                    <h2>Contatti</h2>
                     <hr class="star-primary">
                 </div>
             </div>
