--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">We Do Educational Factchecking</span>
+                        <span class="name">Educational Factchecking</span>
                         <hr class="star-light">
                         <span class="skills">Associazione no-profit per la promozione della media-education</span>
                     </div>
@@ -167,7 +167,9 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>Factcheckers è un’associazione non a scopo di lucro,
+nata nell’estate del 2016, che riunisce un gruppo di giornalisti, social media verifiers, web developers. Ci occupiamo di educational fact-checking per diffondere la cultura della verifica delle fonti tra studenti, docenti, organizzazioni educative.
+</p>
                 </div>
                 <div class="col-lg-4">
                     <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
