--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
                     <p>Factcheckers è un’associazione non a scopo di lucro,
-nata nell’estate del 2016, che riunisce un gruppo di giornalisti, social media verifiers, web developers. Ci occupiamo di educational fact-checking per diffondere la cultura della verifica delle fonti tra studenti, docenti, organizzazioni educative.
+nata nell’estate del 2016, che riunisce un gruppo di giornalisti, social media verifiers, web developers.
 </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                    <p> Ci occupiamo di educational fact-checking per diffondere la cultura della verifica delle fonti tra studenti, docenti, organizzazioni educative.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
