--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Educational Factchecking</span>
+                        <span class="name">FACTCHECKERS</span>
                         <hr class="star-light">
-                        <span class="skills">Associazione no-profit per la promozione della media-education</span>
+                        <span class="skills">Associazione no-profit per la promozione dell'educational fact-checking</span>
                     </div>
                 </div>
             </div>
@@ -244,9 +244,9 @@ nata nell’estate del 2016, che riunisce un gruppo di giornalisti, social media
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
-                        <h3>Location</h3>
-                        <p>3481 Melrose Place
-                            <br>Beverly Hills, CA 90210</p>
+                        <h3>Sede</h3>
+                        <p>Factcheckers Associazione Culturale
+                            <br>Via Alpetto 4a, 23022 Chiavenna (SO)</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
