--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/bussolanews.png" alt="">
+                    <img class="img-responsive" src="img/bussolanews.png" style="max-height:250px;" alt="">
                     <div class="intro-text">
                         <span class="name">FACTCHECKERS</span>
                         <hr class="star-light">
