--- a/index.html
+++ b/index.html
@@ -249,28 +249,19 @@ nata nell’estate del 2016, che riunisce un gruppo di giornalisti, social media
                             <br>Via Alpetto 4a, 23022 Chiavenna (SO)</p>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
+                        <h3>Social Media</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="https://twitter.com/factcheckers_it" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
+                                <a href="https://medium.com/factcheckers" class="btn-social btn-outline"><i class="fa fa-fw fa-medium"></i></a>
                             </li>
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <h3>Thanks</h3>
+                        <p>Sito realizzato con l'aiuto di <a href="http://startbootstrap.com">Start Bootstrap</a>, <a href="https://twitter.com/nelsonmau?lang=it">Andrea Nelson Mauro</a> e <a href="https://twitter.com/mr_Drii?lang=it">Andrea Venier</a></p>
                     </div>
                 </div>
             </div>
