--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         </div>
                         <img src="img/portfolio/laboratori1.jpg" class="img-responsive" alt="">
                     </a>
-                </div>
+                    </div>
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -109,9 +109,12 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
+                     <div class="col-sm-4 portfolio-item">
                         <img src="img/portfolio/materiale1.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
+            </div>        
+            <div class="row">
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
