--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
                     <hr class="star-primary">
                 </div>
             </div>
-            <div class="row">
+           
+
+ <div class="row">
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -102,7 +104,8 @@
                         <img src="img/portfolio/laboratori1.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                
+       		<div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -112,6 +115,11 @@
                         <img src="img/portfolio/materiale1.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
+</div>
+
+
+
+<div class="row">
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -122,6 +130,8 @@
                         <img src="img/portfolio/divulgazione1.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
+
+
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
