--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
            
 
- <div class="row">
+ <div class="row" margin: auto;>
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -119,7 +119,7 @@
 
 
 
-<div class="row">
+<div class="row" margin: auto;>
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
