--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
             </div>
            
 
- <div class="row" margin: auto;>
+ <div class="row">
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
-                            <div class="Lezioni frontali">
+                            <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
