--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top"><img src="img/logo_factcheckers.jpg" style="max-height:75px;"" /></a>
+                <a class="navbar-brand" href="#page-top"><img src="img/logo_factcheckers.jpg" style="max-height:75px;" /></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -91,7 +91,7 @@
                     <hr class="star-primary">
                 </div>
             </div>
-           
+
 
  <div class="row">
                 <div class="col-sm-4 portfolio-item">
@@ -104,7 +104,7 @@
                         <img src="img/portfolio/laboratori1.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
-                
+
        		<div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
