social button in navbar

--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
                     <li class="page-scroll">
                         <a href="#contact">Contatti</a>
                     </li>
+                    <li class="page-scroll">
+                          <a href="https://twitter.com/factcheckers_it" class="btn-social"><i class="fa fa-fw fa-twitter"></i></a>
+                    </li>
+                    <li class="page-scroll">
+                          <a href="https://medium.com/factcheckers" class="btn-social"><i class="fa fa-fw fa-medium"></i></a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
