new section about

--- a/index.html
+++ b/index.html
@@ -170,9 +170,19 @@ nata nell’estate del 2016, che riunisce un gruppo di giornalisti, social media
                 <div class="col-lg-4">
                     <p> Ci occupiamo di educational fact-checking per diffondere la cultura della verifica delle fonti tra studenti, docenti, organizzazioni educative.</p>
                 </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
+                <div class="col-sm-4 text-center">
+                    <a href="https://twitter.com/gab_jacomella" class="btn btn-lg btn-outline">
+                        <i class="fa fa-twitter"></i> Gabriela Jacomella
+                    </a>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <a href="https://twitter.com/nicolabruno" class="btn btn-lg btn-outline">
+                        <i class="fa fa-twitter"></i> Nicola Bruno
+                    </a>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <a href="https://twitter.com/FulvioRomanin" class="btn btn-lg btn-outline">
+                        <i class="fa fa-twitter"></i> Fulvio Romanin
                     </a>
                 </div>
             </div>
