Modifica class network

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ nata nell’estate del 2016, che riunisce un gruppo di giornalisti, social media
     </section>
     
         <!-- Network Section -->
-    <section class="success" id=“network”>
+    <section id=“network”>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
