--- a/index.html
+++ b/index.html
@@ -224,31 +224,32 @@ nata nell’estate del 2016, che riunisce un gruppo di giornalisti, social media
 </p>              
                 </div>                           
 <div class="row">
-  <div class="col-xs-6 col-md-3">
+  <div class="col-lg-3">
 <img src="img/normale.png” class="img-responsive" alt="">
-                    </a>
+  </div>                  
 </div>
 
 <div class="row">
-  <div class="col-xs-6 col-md-3">
+  <div class="col-lg-3">
 <img src="img/padova.png” class="img-responsive" alt="">
-                    </a>
+  </div>                  
 </div>
 
 <div class="row">
-  <div class="col-xs-6 col-md-3">
+  <div class="col-lg-3">
 <img src="img/reading.png” class="img-responsive" alt="">
-                    </a>
+   </div>                
 </div>
 
 <div class="row">
-  <div class="col-xs-6 col-md-3">
+  <div class="col-lg-3">
 <img src="img/siena.png” class="img-responsive" alt="">
-                    </a>
+  </div>                 
 </div>  
 
                 <div class="row">
                 <div class="col-lg-12">
+                    <p></p>
                     <p>Collaboriamo in maniera stabile con l'Università di Milano Bicocca, che ci fornisce un supporto metodologico e pedagogico nell'elaborazione degli interventi in classe e del materiale didattico.
 </p>              
                 </div>     
