--- a/index.html
+++ b/index.html
@@ -222,30 +222,10 @@ nata nell’estate del 2016, che riunisce un gruppo di giornalisti, social media
                 <div class="col-lg-12">
                     <p>Abbiamo tenuto interventi e laboratori nei seguenti luoghi:
 </p>              
-                </div>                           
-<div class="row">
-  <div class="col-lg-3">
-<img src="img/normale.png” class="img-responsive" alt="">
-  </div>                  
-
-                                       
-  <div class="col-lg-3">
-<img src="img/padova.png” class="img-responsive" alt="">
-  </div>                  
-
-
-  <div class="col-lg-3">
-<img src="img/reading.png” class="img-responsive" alt="">
-   </div>                
-
-  <div class="col-lg-3">
-<img src="img/siena.png” class="img-responsive" alt="">
-  </div>                 
-</div>  
-
-                <div class="row">
-                <div class="col-lg-12">
-                    <p></p>
+                <p>- Scuola Normale di Pisa<br />
+                   - Università degli Studi di Padova<br />
+                   - Università di Siena<br />
+                    - University of Reading (UK)<br /></p>
                     <p>Collaboriamo in maniera stabile con l'Università di Milano Bicocca, che ci fornisce un supporto metodologico e pedagogico nell'elaborazione degli interventi in classe e del materiale didattico.
 </p>              
                 </div>     
