--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@ nata nell’estate del 2016, che riunisce un gruppo di giornalisti, social media
                             <h2>Divulgazione</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/divulgazione.jpg" class="img-responsive img-centered" alt="">
-                            <p>Diffondiamo e condividiamo materiale ed esperienze di fact-checking elaborato dall’International Fact-checkers Association e dai suoi membri, sui nostri canali Twitter e Medium. Collaboriamo con varie testate giornalistiche italiane, con rubriche fisse e articoli di approfondimento. Interveniamo in dibattiti, tavole rotonde e appuntamenti di riflessione sul tema delle "fake news" e della verifica delle notizie.
+                            <p>Diffondiamo e condividiamo materiale ed esperienze di fact-checking elaborato dall’International Fact-checkers Association e dai suoi membri, sui nostri canali Twitter e Medium.<br /> Collaboriamo con varie testate giornalistiche italiane, con rubriche fisse e articoli di approfondimento. Interveniamo in dibattiti, tavole rotonde e appuntamenti di riflessione sul tema delle "fake news" e della verifica delle notizie.
 </p>
                            
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -423,10 +423,10 @@ nata nell’estate del 2016, che riunisce un gruppo di giornalisti, social media
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Lezioni frontali</h2>
+                            <h2>Divulgazione</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/lezioni.jpg" class="img-responsive img-centered" alt="">
-                            <p>Teniamo conferenze e lezioni "tradizionali" in università, festival culturali, centri di formazione e su richiesta di associazioni ed enti locali. L'obiettivo è quello di sensibilizzare sulla necessità di uno spirito critico nella fruizione delle notizie diffuse sulla Rete, e di innescare un dibattito sulla responsabilità individuale nella lotta contro le "bufale" e la disinformazione. 
+                            <img src="img/portfolio/divulgazione.jpg" class="img-responsive img-centered" alt="">
+                            <p>Diffondiamo e condividiamo materiale ed esperienze di fact-checking elaborato dall’International Fact-checkers Association e dai suoi membri, sui nostri canali Twitter e Medium.<br /> Collaboriamo con varie testate giornalistiche italiane, con rubriche fisse e articoli di approfondimento. Interveniamo in dibattiti, tavole rotonde e appuntamenti di riflessione sul tema delle "fake news" e della verifica delle notizie.
 </p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
@@ -447,24 +447,12 @@ nata nell’estate del 2016, che riunisce un gruppo di giornalisti, social media
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Lezioni frontali</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/safe.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
+                            <img src="img/portfolio/lezioni.png" class="img-responsive img-centered" alt="">
+                            <p>Teniamo conferenze e lezioni "tradizionali" in università, festival culturali, centri di formazione e su richiesta di associazioni ed enti locali. L'obiettivo è quello di sensibilizzare sulla necessità di uno spirito critico nella fruizione delle notizie diffuse sulla Rete, e di innescare un dibattito sulla responsabilità individuale nella lotta contro le "bufale" e la disinformazione. 
+</p>
+                           
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
