--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ nata nell’estate del 2016, che riunisce un gruppo di giornalisti, social media
                         <div class="modal-body">
                             <h2>Lezioni frontali</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/lezioni.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/lezioni.jpg" class="img-responsive img-centered" alt="">
                             <p>Teniamo conferenze e lezioni "tradizionali" in università, festival culturali, centri di formazione e su richiesta di associazioni ed enti locali. L'obiettivo è quello di sensibilizzare sulla necessità di uno spirito critico nella fruizione delle notizie diffuse sulla Rete, e di innescare un dibattito sulla responsabilità individuale nella lotta contro le "bufale" e la disinformazione. 
 </p>
                            
