--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <p>Factcheckers nasce dalla nostra partecipazione a Global Fact 3, la conferenza mondiale organizzata nel giugno 2016 dall’International Fact-Checking Network, i cui membri aderiscono ad un Codice di condotta sul fact-checking (condiviso da quasi 40 associazioni in 37 Paesi diversi).
-</p>
+                    </p>
 
                     <p> Ecco i punti chiave:</p>
 <p>&#8211; impegno all’<strong>imparzialità e alla correttezza</strong>;<br />
@@ -219,15 +219,31 @@
             <div class="row">
                 <div class="col-lg-12">
                     <p>Abbiamo tenuto interventi e laboratori nei seguenti luoghi:
-</p>
-                <p>- Scuola Normale di Pisa<br />
+                    </p>
+                    <p>- Scuola Normale di Pisa<br />
                    - Università degli Studi di Padova<br />
                    - Università di Siena<br />
                     - University of Reading (UK)<br /></p>
                     <p>Collaboriamo in maniera stabile con l'Università di Milano Bicocca, che ci fornisce un supporto metodologico e pedagogico nell'elaborazione degli interventi in classe e del materiale didattico.
-</p>
+                    </p>
                 </div>
-
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-lg-3 partner img-responsive">
+                  <img src="img/reading.png" />
+                </div>
+                <div class="col-lg-3 partner">
+                  <img src="img/normale.png" />
+                </div>
+                <div class="col-lg-3 partner">
+                  <img src="img/padova2.jpg" />
+                </div>
+                <div class="col-lg-3 partner">
+                  <img src="img/unisi.png" />
+                </div>
+              </div>
+            </div>
         </div>
     </section>
 
