--- a/index.html
+++ b/index.html
@@ -216,16 +216,16 @@
             </div>
             <br>
             <div class="row">
-                <div class="col-lg-3 partner img-responsive">
+                <div class="col-lg-3 col-md-3 col-xs-6 partner img-responsive">
                   <img src="img/reading.png" />
                 </div>
-                <div class="col-lg-3 partner">
+                <div class="col-lg-3 col-md-3 col-xs-6 partner">
                   <img src="img/normale.png" />
                 </div>
-                <div class="col-lg-3 partner">
+                <div class="col-lg-3 col-md-3 col-xs-6 partner">
                   <img src="img/padova2.jpg" />
                 </div>
-                <div class="col-lg-3 partner">
+                <div class="col-lg-3 col-md-3 col-xs-6 partner">
                   <img src="img/unisi.png" />
                 </div>
              <p></p>   
