--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-6 portfolio-item">
+                <div class="col-sm-2 portfolio-item"></div>
+                <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -111,8 +112,7 @@
                         <img src="img/portfolio/laboratori1.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
-
-       		<div class="col-sm-6 portfolio-item">
+                <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -122,12 +122,11 @@
                         <img src="img/portfolio/materiale1.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
-</div>
-
-
-
-<div class="row" margin: auto;>
-                <div class="col-sm-6 portfolio-item">
+                <div class="col-sm-2 portfolio-item"></div>
+            </div>
+            <div class="row" margin: auto;>
+                <div class="col-sm-2 portfolio-item"></div>
+                <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -137,9 +136,7 @@
                         <img src="img/portfolio/divulgazione1.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
-
-
-                <div class="col-sm-6 portfolio-item">
+                <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -149,6 +146,7 @@
                         <img src="img/portfolio/lezioni1.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
+                <div class="col-sm-2 portfolio-item"></div>
             </div>
         </div>
     </section>
