--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-2 portfolio-item"></div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-3 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -112,7 +111,7 @@
                         <img src="img/portfolio/laboratori1.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-3 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -122,11 +121,7 @@
                         <img src="img/portfolio/materiale1.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
-                <div class="col-sm-2 portfolio-item"></div>
-            </div>
-            <div class="row" margin: auto;>
-                <div class="col-sm-2 portfolio-item"></div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-3 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -136,7 +131,7 @@
                         <img src="img/portfolio/divulgazione1.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-3 portfolio-item">
                     <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -146,7 +141,6 @@
                         <img src="img/portfolio/lezioni1.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
-                <div class="col-sm-2 portfolio-item"></div>
             </div>
         </div>
     </section>
@@ -198,7 +192,7 @@
                 </div>
             </div>
             <div class="row">
-              <div class="col-lg-6">
+              <div class="col-lg-6 col-md-6 col-xs-12">
                 <div class="col-lg-4">
                   <img src="img/ifcn.png" class="img-responsive"/>
                 </div>
@@ -207,7 +201,7 @@
                   </p>
                 </div>
               </div>
-              <div class="col-lg-6">
+              <div class="col-lg-6 col-md-6 col-xs-12">
                 <div class="col-lg-4">
                   <img src="img/bicocca.jpg" class="img-responsive"/>
                 </div>
@@ -217,26 +211,30 @@
                 </div>
               </div>
             </div>
+          </div>
+        </section>
+        <section class="success">
+          <div class="container">
             <div class="row">
-              <div class="col-lg-12">
+              <div class="col-lg-12 text-center">
                 <p>Abbiamo tenuto interventi e laboratori nei seguenti luoghi:
                 </p>
-              <div class="col-lg-3 col-md-3 col-xs-6 partner img-responsive">
-                <img src="img/reading.png" />
-              </div>
-              <div class="col-lg-3 col-md-3 col-xs-6 partner">
-                <img src="img/normale.png" />
-              </div>
-              <div class="col-lg-3 col-md-3 col-xs-6 partner">
-                <img src="img/padova2.jpg" />
-              </div>
-              <div class="col-lg-3 col-md-3 col-xs-6 partner">
-                <img src="img/unisi.png" />
+                <div class="col-lg-3 col-md-3 col-xs-6 partner img-responsive">
+                  <img src="img/reading.png" />
+                </div>
+                <div class="col-lg-3 col-md-3 col-xs-6 partner">
+                  <img src="img/normale.png" />
+                </div>
+                <div class="col-lg-3 col-md-3 col-xs-6 partner">
+                  <img src="img/padova2.jpg" />
+                </div>
+                <div class="col-lg-3 col-md-3 col-xs-6 partner">
+                  <img src="img/unisi.png" />
               </div>
             </div>
           </div>
         </div>
-    </section>
+        </section>>
 
 
     <!-- Contact Section -->
