cambio logo padova

--- a/index.html
+++ b/index.html
@@ -222,13 +222,13 @@
                 <div class="col-lg-3 col-md-3 col-xs-6 partner img-responsive">
                   <img src="img/reading.png" />
                 </div>
-                <div class="col-lg-3 col-md-3 col-xs-6 partner">
+                <div class="col-lg-3 col-md-3 col-xs-6 partner img-responsive">
                   <img src="img/normale.png" />
                 </div>
-                <div class="col-lg-3 col-md-3 col-xs-6 partner">
-                  <img src="img/padova2.jpg" />
+                <div class="col-lg-3 col-md-3 col-xs-6 partner img-responsive">
+                  <img src="img/padova.png" />
                 </div>
-                <div class="col-lg-3 col-md-3 col-xs-6 partner">
+                <div class="col-lg-3 col-md-3 col-xs-6 partner img-responsive">
                   <img src="img/unisi.png" />
               </div>
             </div>
