--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                   <img src="img/normale.png" />
                 </div>
                 <div class="col-lg-3 col-md-3 col-xs-6 partner img-responsive">
-                  <img src="img/padova.png" />
+                  <img src="img/unipadova.png" />
                 </div>
                 <div class="col-lg-3 col-md-3 col-xs-6 partner img-responsive">
                   <img src="img/unisi.png" />
