--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                   <img src="img/bicocca.jpg" class="img-responsive"/>
                 </div>
                 <div class="col-lg-8">
-                  <p>Collaboriamo in maniera stabile con l'Università di Milano Bicocca, che ci fornisce un supporto metodologico e pedagogico nell'elaborazione degli interventi in classe e del materiale didattico.
+                  <p>Collaboriamo in maniera stabile con <a href="http://www.unimib.it/go/888889035/Home/Italiano/Elenco-Docenti/FERRI-PAOLO-MARIA-dipartimento-di-scienze-umane-per-la-formazione-riccardo-massa">Paolo Ferri</a> e <a href="http://www.stefanomoriggi.it/">Stefano Moriggi</a> dell'Università di Milano Bicocca, che ci fornisce un supporto metodologico e pedagogico. Abbiamo, inoltre, tenuto interventi alla <a href="https://www.youtube.com/watch?v=-mhEU9bK3dA">Scuola Normale di Pisa</a> , <a href="https://segnalerumore.it/fact-checking-questo-sconosciuto-i-risultati-di-un-test-sperimentale-6c776e5206ef">Università di Padova</a>, Università di Siena e University di Reading. 
                   </p>
                 </div>
               </div>
