--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
               </div>
               <div class="col-lg-6 col-md-6 col-xs-12">
                 <div class="col-lg-4">
-                  <img src="img/bicocca.jpg" class="img-responsive"/>
+                  <img src="img/university.png" class="img-responsive"/>
                 </div>
                 <div class="col-lg-8">
                   <p>Collaboriamo in maniera stabile con <a href="http://www.unimib.it/go/888889035/Home/Italiano/Elenco-Docenti/FERRI-PAOLO-MARIA-dipartimento-di-scienze-umane-per-la-formazione-riccardo-massa">Paolo Ferri</a> e <a href="http://www.stefanomoriggi.it/">Stefano Moriggi</a> dell'Università di Milano Bicocca, che ci fornisce un supporto metodologico e pedagogico. Abbiamo, inoltre, tenuto interventi alla <a href="https://www.youtube.com/watch?v=-mhEU9bK3dA">Scuola Normale di Pisa</a> , <a href="https://segnalerumore.it/fact-checking-questo-sconosciuto-i-risultati-di-un-test-sperimentale-6c776e5206ef">Università di Padova</a>, Università di Siena e University di Reading. 
@@ -212,29 +212,7 @@
               </div>
             </div>
           </div>
-        </section>
-        <section class="success">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-12 text-center">
-                <p>Abbiamo tenuto interventi e laboratori nei seguenti luoghi:
-                </p>
-                <div class="col-lg-3 col-md-3 col-xs-6 partner img-responsive">
-                  <img src="img/reading.png" />
-                </div>
-                <div class="col-lg-3 col-md-3 col-xs-6 partner img-responsive">
-                  <img src="img/normale.png" />
-                </div>
-                <div class="col-lg-3 col-md-3 col-xs-6 partner img-responsive">
-                  <img src="img/unipadova.png" />
-                </div>
-                <div class="col-lg-3 col-md-3 col-xs-6 partner img-responsive">
-                  <img src="img/unisi.png" />
-              </div>
-            </div>
-          </div>
-        </div>
-        </section>>
+      
 
 
     <!-- Contact Section -->
