--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/laboratori1.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/laboratori.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-3 portfolio-item">
@@ -118,7 +118,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/materiale1.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/materiale.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-3 portfolio-item">
@@ -128,7 +128,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/divulgazione1.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/divulgazione.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-3 portfolio-item">
@@ -138,7 +138,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/lezioni1.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/lezioni.png" class="img-responsive" alt="">
                     </a>
                 </div>
             </div>
