--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                         <div class="modal-body">
                             <h2>Laboratori</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/laboratori.jpg" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/laboratori.png" class="img-responsive img-centered" alt="">
                             <p>Interveniamo in scuole e atenei con test e attività di laboratorio, specificamente pensati per diverse fasce d’età ed esperienza, durante i quali viene messa alla prova lo spirito critico dei partecipanti nei confronti della Rete e vengono insegnate le tecniche base del fact-checking.<br>Ci avvaliamo della consulenza didattica e della collaborazione di specialisti dell'Università degli Studi Bicocca di Milano.
 </p>
 
@@ -356,7 +356,7 @@
                         <div class="modal-body">
                             <h2>Materiale Didattico</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/materiale.jpg" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/materiale.png" class="img-responsive img-centered" alt="">
                             <p>Creiamo strumenti digitali e cartacei per i docenti e gli educatori che vogliano introdurre i propri studenti alle basi della verifica delle notizie. In collaborazione con l'International Fact Checking Network, stiamo creando una lezione virtuale per le scuole superiori di tutto il mondo, da mettere in pratica in occasione dell'<a href="http://factcheckingday.com/">International Fact Checking Day</a> (2 aprile 2017).
 </p>
 
@@ -381,7 +381,7 @@
                         <div class="modal-body">
                             <h2>Divulgazione</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/divulgazione.jpg" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/divulgazione.png" class="img-responsive img-centered" alt="">
                             <p>Diffondiamo e condividiamo materiale ed esperienze di fact-checking elaborato dall’International Fact-checkers Association e dai suoi membri, sui nostri canali Twitter e Medium.<br /> Collaboriamo con varie testate giornalistiche italiane, con rubriche fisse e articoli di approfondimento. Interveniamo in dibattiti, tavole rotonde e appuntamenti di riflessione sul tema delle "fake news" e della verifica delle notizie.
 </p>
 
@@ -406,7 +406,7 @@
                         <div class="modal-body">
                             <h2>Divulgazione</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/divulgazione.jpg" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/divulgazione.png" class="img-responsive img-centered" alt="">
                             <p>Diffondiamo e condividiamo materiale ed esperienze di fact-checking elaborato dall’International Fact-checkers Association e dai suoi membri, sui nostri canali Twitter e Medium.<br /> Collaboriamo con varie testate giornalistiche italiane, con rubriche fisse e articoli di approfondimento. Interveniamo in dibattiti, tavole rotonde e appuntamenti di riflessione sul tema delle "fake news" e della verifica delle notizie.
 </p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
