--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
     <meta name="author" content="">
 
     <title>Factcheckers</title>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-88120851-1', 'auto');
+  ga('send', 'pageview');
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -479,6 +486,8 @@
         </div>
     </div>
 
+
+</script>
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
 
